--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "recharts": "^3.2.1",
+    "rxjs": "^7.8.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
